--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,16 +4,13 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "lib": ["es2015"],
-
     "rootDir": "src",
     "outDir": "lib",
-
     "strict": true,
     "alwaysStrict": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
@@ -21,13 +18,13 @@
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "downlevelIteration": true,
     "declaration": true,
-
-    "pretty": true
+    "pretty": true,
+    "jsx": "react-jsx",
+    "esModuleInterop": true
   },
   "include": ["typings/**/*", "src/**/*"]
 }
