feat: initial implementation of tinky-mouse package
This commit introduces the full implementation of the tinky-mouse library,
extracted and refined from the core tinky package.

Key features:
- Core Logic:
  - Added 'src/utils/sequences.ts' for ANSI mouse sequence constants.
  - Added 'src/utils/mouse.ts' for parsing SGR (1006) and X11 events.
- React Context & Hooks:
  - Implemented 'MouseProvider' in 'src/contexts/MouseContext.tsx'.
  - Added 'useMouseContext' hook for accessing the context.
  - Added 'useMouse' hook for easy subscription.
- Documentation:
  - Added comprehensive TSDoc comments.
  - Created detailed README.md in English.
  - Added localized READMEs: README.ja-JP.md and README.zh-CN.md.
  - Generated API documentation via TypeDoc.
- Configuration:
  - Updated 'package.json' with correct name 'tinky-mouse'.
  - Added 'LICENSE' file (Apache 2.0).
  - Configured TypeScript and ESLint settings.
- Tests:
  - Added unit tests for mouse sequence parsing.

--- a/package.json
+++ b/package.json
@@ -1,49 +1,45 @@
 {
-  "name": "tinky",
+  "name": "tinky-mouse",
   "version": "0.1.0",
-  "description": "React for CLIs, re-imagined with the Taffy engine",
+  "description": "Mouse event handling for tinky applications",
   "keywords": [
-    "react",
-    "ink",
-    "taffy",
-    "cli",
+    "tinky",
+    "mouse",
+    "event",
+    "input",
     "terminal",
-    "layout-engine",
-    "flexbox",
-    "grid",
-    "renderer"
+    "interaction"
   ],
-  "homepage": "https://github.com/ByteLandTechnology/tinky#readme",
+  "homepage": "https://github.com/ByteLandTechnology/tinky-mouse#readme",
   "bugs": {
-    "url": "https://github.com/ByteLandTechnology/tinky/issues"
+    "url": "https://github.com/ByteLandTechnology/tinky-mouse/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ByteLandTechnology/tinky.git"
+    "url": "git+https://github.com/ByteLandTechnology/tinky-mouse.git"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "author": {
-    "name": "ByteLandTechnology"
+    "name": "ByteLand Technology Limited"
   },
   "type": "module",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "tsc",
+    "test": "bun test",
     "build": "tsc && npm run docs",
     "lint": "eslint src tests",
     "prepublish": "npm run build",
     "prepare": "husky",
     "docs": "typedoc --plugin typedoc-plugin-markdown --disableSources --out docs/api && prettier --write docs/api"
   },
-  "dependencies": {
-    "tslint": "^5.20.1",
-    "typescript": "^5.9.3"
-  },
   "files": [
     "./bin/*",
     "./lib/*"
   ],
   "typings": "./lib/index.d.ts",
+  "peerDependencies": {
+    "tinky": "^1.2.2"
+  },
   "devDependencies": {
     "@commitlint/cli": "^20.3.0",
     "@commitlint/config-conventional": "^20.3.0",
@@ -53,6 +49,7 @@
     "@semantic-release/github": "^12.0.2",
     "@semantic-release/npm": "^13.1.3",
     "@semantic-release/release-notes-generator": "^14.1.0",
+    "@types/bun": "^1.3.6",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
